--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -1,19 +1,20 @@
 .container {
     display: flex;
-    /* justify-content: center; */
+    justify-content: space-evenly;
     align-items: center;
     height: 10%;
     background-color: #98ff98;
     font-size: 1.2rem;
 }
 
-.container img {
-    max-width: 15%;
+.logo{
+    max-width: 5%;
     height: auto;
     width: auto;
-    display: flex;
-    justify-self: start;
+    justify-content: flex-start;
     padding: 5px;
     cursor: pointer;
+    /* background-color: red; */
 }
+
 
