--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -122,7 +122,7 @@
     background: linear-gradient(
       90deg,
       rgb(152, 255, 152) 0%,
-      rgb(70, 255, 80) 100%
+      rgba(33, 129, 38, 0.637) 100%
     );
     outline: none;
     border: none;
@@ -135,7 +135,7 @@
     background: linear-gradient(
       90deg,
       rgb(152, 255, 150) 0%,
-      rgb(9, 255, 0) 100%
+      rgba(9, 255, 0, 0.829) 100%
     );
     transition: all 0.4s ease-out;
   }
