Added python flask back-end to handle form submission (sending an email) and cleaned up and commented code. TODO is to add some missing images and put in error handling and non-submit case handling for fetch call.

--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -14,6 +14,7 @@
     justify-content: flex-start;
     padding: 5px;
     cursor: pointer;
+    /* can set a background color to see changes or bug-fix */
     /* background-color: red; */
 }
 
