--- a/src/Styles/Gallery.css
+++ b/src/Styles/Gallery.css
@@ -1,11 +1,3 @@
-/* Target the overall grid */
-/* .img-grid{
-    margin: 20px auto;
-    display: grid;
-    grid-template-columns: 1ft 1ft 1ft;
-    grid-gap: 40px;
-} */
-
 * {
     box-sizing: border-box;
     padding: 0;
@@ -20,16 +12,6 @@
     height: 100vh;
 }
 
-/* Target the individual image container */
-/* .img-card{
-    overflow: hidden;
-    display: block;
-    height: 0;
-    padding: 50% 0;
-    position: relative;
-    opacity: 0.8;
-} */
-
 .img-card{
     /* width: 270px; */
     flex-basis: 300px;
@@ -39,13 +21,16 @@
     margin: 10px;
     border-radius: 15px;
     background-color: #98ff98;
+    /* properly format and display text/element overflow
+        you can specify whether the overflow is hidden or
+        accessible via scrollbar/ellipses. */
     overflow: auto;
 }
 
 .img-card img{
     /* height: 150px; */
     height: 60%;
-    /* stretches the img */
+    /* can stretch the img, a little */
     width: 100%;
      /* contain keeps the aspect ratio of the original photo
         cover will zoom in the image but cover the space. */
@@ -70,14 +55,3 @@
     margin-right: 5px;
     padding: 2px;
 }
-
-/* Target the image inside the image container */
-/* .img-card img{
-    min-width: 100%;
-    min-height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-} */
