Security update changing from Flask-Mail to SendGrid (middleware service) which means we can keep our email credentials out of the environment variables (more secure as process can be viewed and .env vars extracted). Also added most of the images that were left to add, will refresh a few and add one or two after launch. This is the final update with touch-ups before attempting to deploy.

--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -1,4 +1,11 @@
+.form-parent{
+  background: url('../images/portfolioBG2.jpg') center center/cover no-repeat;
+  display: flex;
+}
+
 .form-container {
+    /* Grey bg to keep the image from peeking through */
+    background-color: grey; 
     margin: 100px auto;
     width: 90%;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
