--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -2,6 +2,15 @@
     background-color: black;
 }
 
+.about-media
+{
+    background: url('../images/aboutCat.jpg') center center/cover no-repeat;
+    height: 30vh;
+    width: 100%;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.2);
+    object-fit: contain;
+}
+
 .about-description{
     background-color: #98ff98;
     display: flex;
